--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "expo-notifications": "~0.20.1",
     "expo-device": "~5.4.0",
     "expo-constants": "~14.4.2",
-    "expo-splash-screen": "~0.20.5"
+    "expo-splash-screen": "~0.20.5",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
